--- a/TGC.Group/App.config
+++ b/TGC.Group/App.config
@@ -18,10 +18,10 @@
         <value>Alumnos</value>
       </setting>
       <setting name="Name" serializeAs="String">
-        <value>Grupo 99</value>
+        <value>EjemploRename</value>
       </setting>
       <setting name="Description" serializeAs="String">
-        <value>Mi idea - Descripción de la idea</value>
+        <value>SurvivalCraft - EjemploRename que elijio SurvivalCraft.</value>
       </setting>
       <setting name="ShadersDirectory" serializeAs="String">
         <value>..\..\Shaders\</value>
@@ -31,6 +31,9 @@
       </setting>
       <setting name="TexturaCaja" serializeAs="String">
         <value>cajaMadera4.jpg</value>
+      </setting>
+      <setting name="PropiedadCustom" serializeAs="String">
+        <value>Una propiedad para ser utilizada dentro del codigo y que quiero configurar.</value>
       </setting>
     </TGC.Group.Game>
   </userSettings>
